--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,15 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# http://editorconfig.org
 
-# top-most EditorConfig file
 root = true
 
 [*]
+indent_style = space
+indent_size = 2
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-indent_style = tab
+trim_trailing_whitespace = true
+
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
