--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "systemjs-material-start",
-  "version": "1.1.0",
-  "description": "SystemJS Material Start example",
-  "author": "Jon Stevens <latchkey@gmail.com>",
-  "dependencies": {},
+  "name": "ng-starter-kit",
+  "version": "1.0.0",
+  "description": "Angular 1, JSPM,  Material Start kit",
+  "main": "gulpfile.babel.js",
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-helpers": "^1.5.3",
-    "jspm": "^0.15.1",
-    "protractor": "^2.0.0"
+    "babel-core": "^5.8.21",
+    "gulp-ng-recipes": "^0.0.3"
   },
-  "jspm": {
-    "directories": {
-      "baseURL": "dist",
-      "lib": "src",
-      "packages": "jspm_packages"
-    },
-    "configFile": "system.config.js",
-    "dependencies": {
-      "angular": "github:angular/bower-angular@^1.3.15",
-      "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
-      "angular-aria": "github:angular/bower-angular-aria@^1.3.15",
-      "angular-material": "github:angular/bower-material@^0.8.3",
-      "angular-mocks": "github:angular/bower-angular-mocks@^1.3.15",
-      "angular-ui-router": "github:angular-ui/ui-router@^0.2.13",
-      "css": "github:systemjs/plugin-css@^0.1.6",
-      "json": "github:systemjs/plugin-json@^0.1.0",
-      "oclazyload": "github:ocombe/ocLazyLoad@^0.6.3",
-      "oclazyload-systemjs-router": "github:lookfirst/oclazyload-systemjs-router@^1.1.5"
-    },
-    "devDependencies": {
-      "babel": "npm:babel@^4.7.16",
-      "babel-runtime": "npm:babel-runtime@^4.7.16"
-    }
+  "scripts": {
+    "test": "karma test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lookfirst/systemjs-material-start.git"
+    "url": "git+https://github.com/xmlking/ng-starter-kit.git"
   },
-  "scripts": {
-    "postinstall": "jspm install",
-    "test": "gulp recompile && ./node_modules/gulp-helpers/node_modules/karma/bin/karma start --single-run --browsers PhantomJS",
-    "protractor-setup": "./node_modules/.bin/webdriver-manager update --standalone",
-    "protractor-run": "gulp babel-e2e && ./node_modules/.bin/protractor protractor.conf.js"
+  "keywords": [
+    "JSPM",
+    "Angular"
+  ],
+  "author": "Sumanth Chinthagunta <xmlking@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/xmlking/ng-starter-kit/issues"
+  },
+  "homepage": "https://github.com/xmlking/ng-starter-kit#readme",
+  "jspm": {
+    "directories": {},
+    "configFile": "system.config.js",
+    "dependencies": {
+      "angular": "github:angular/bower-angular@^1.4.3",
+      "angular-animate": "github:angular/bower-angular-animate@^1.4.3",
+      "angular-aria": "github:angular/bower-angular-aria@^1.4.3",
+      "angular-material": "github:angular/bower-material@^0.10.0",
+      "angular-mocks": "github:angular/bower-angular-mocks@^1.4.3",
+      "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
+      "css": "github:systemjs/plugin-css@^0.1.13",
+      "json": "github:systemjs/plugin-json@^0.1.0",
+      "oclazyload-systemjs-router": "github:lookfirst/oclazyload-systemjs-router@^1.2.2",
+      "ocLazyLoad": "github:ocombe/ocLazyLoad@^1.0.4",
+      "text": "github:systemjs/plugin-text@^0.0.2"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.6.4",
+      "babel-runtime": "npm:babel-runtime@^5.6.4",
+      "core-js": "npm:core-js@^0.9.17"
+    }
   }
 }
