--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "gulpfile.babel.js",
   "devDependencies": {
     "babel-core": "^5.8.21",
-    "gulp-ng-recipes": "^0.0.3"
+    "gulp-ng-recipes": "^0.0.6"
   },
   "scripts": {
-    "test": "karma test"
+    "test": "karma test",
+    "postinstall": "jspm install"
   },
   "repository": {
     "type": "git",
@@ -26,18 +27,19 @@
   "homepage": "https://github.com/xmlking/ng-starter-kit#readme",
   "jspm": {
     "directories": {},
-    "configFile": "system.config.js",
+    "configFile": "jspm.config.js",
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.4.3",
       "angular-animate": "github:angular/bower-angular-animate@^1.4.3",
       "angular-aria": "github:angular/bower-angular-aria@^1.4.3",
       "angular-material": "github:angular/bower-material@^0.10.0",
+      "angular-messages": "github:angular/bower-angular-messages@^1.4.3",
       "angular-mocks": "github:angular/bower-angular-mocks@^1.4.3",
       "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
       "css": "github:systemjs/plugin-css@^0.1.13",
       "json": "github:systemjs/plugin-json@^0.1.0",
-      "oclazyload-systemjs-router": "github:lookfirst/oclazyload-systemjs-router@^1.2.2",
       "ocLazyLoad": "github:ocombe/ocLazyLoad@^1.0.4",
+      "oclazyload-systemjs-router": "github:lookfirst/oclazyload-systemjs-router@^1.2.2",
       "text": "github:systemjs/plugin-text@^0.0.2"
     },
     "devDependencies": {
