--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "ng-starter-kit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Angular 1, JSPM,  Material Start kit",
   "main": "gulpfile.babel.js",
   "devDependencies": {
-    "babel-core": "^5.8.21",
-    "gulp-ng-recipes": "^0.0.6"
+    "gulp-ng-recipes": "^0.0.11"
   },
   "scripts": {
     "test": "karma test",
@@ -29,23 +28,23 @@
     "directories": {},
     "configFile": "jspm.config.js",
     "dependencies": {
-      "angular": "github:angular/bower-angular@^1.4.3",
-      "angular-animate": "github:angular/bower-angular-animate@^1.4.3",
-      "angular-aria": "github:angular/bower-angular-aria@^1.4.3",
-      "angular-material": "github:angular/bower-material@^0.10.0",
-      "angular-messages": "github:angular/bower-angular-messages@^1.4.3",
-      "angular-mocks": "github:angular/bower-angular-mocks@^1.4.3",
+      "angular": "github:angular/bower-angular@^1.4.5",
+      "angular-animate": "github:angular/bower-angular-animate@^1.4.5",
+      "angular-aria": "github:angular/bower-angular-aria@^1.4.5",
+      "angular-material": "github:angular/bower-material@^0.11.0-rc1",
+      "angular-messages": "github:angular/bower-angular-messages@^1.4.5",
+      "angular-mocks": "github:angular/bower-angular-mocks@^1.4.5",
       "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
-      "css": "github:systemjs/plugin-css@^0.1.13",
+      "css": "github:systemjs/plugin-css@^0.1.15",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "ocLazyLoad": "github:ocombe/ocLazyLoad@^1.0.4",
       "oclazyload-systemjs-router": "github:lookfirst/oclazyload-systemjs-router@^1.2.2",
       "text": "github:systemjs/plugin-text@^0.0.2"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.6.4",
-      "babel-runtime": "npm:babel-runtime@^5.6.4",
-      "core-js": "npm:core-js@^0.9.17"
+      "babel": "npm:babel-core@^5.8.23",
+      "babel-runtime": "npm:babel-runtime@^5.8.20",
+      "core-js": "npm:core-js@^1.1.3"
     }
   }
 }
