--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -48,6 +48,13 @@ browserSync:
     release:
       notify: false
 
+# http-proxy
+apiProxy:
+  options:
+    debug:
+      target: http://localhost:8050
+      prefix: v1
+
 # css
 sass:
   src:
@@ -85,7 +92,7 @@ sourcemaps:
 # scripts
 # for typescript use "app/**/*.ts"
 scripts:
-  src: "app/**/*.js"
+  src: "app/**/*.ts"
   dest: .tmp
 
 # images
