--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ng-starter-kit",
-  "version": "1.0.1",
-  "description": "Angular 1, JSPM,  Material Start kit",
+  "version": "1.1.0",
+  "description": "Angular 1.4.x, TypeScript, JSPM,  Material starter kit",
   "main": "gulpfile.babel.js",
   "devDependencies": {
-    "gulp-ng-recipes": "^0.0.11"
+    "gulp-ng-recipes": "^0.0.13",
+    "gulp-sass": "^2.0.4"
   },
   "scripts": {
     "test": "karma test",
@@ -15,8 +16,10 @@
     "url": "git+https://github.com/xmlking/ng-starter-kit.git"
   },
   "keywords": [
+    "Angular 1.4.x",
     "JSPM",
-    "Angular"
+    "Material Design",
+    "TypeScript"
   ],
   "author": "Sumanth Chinthagunta <xmlking@gmail.com>",
   "license": "MIT",
@@ -28,23 +31,38 @@
     "directories": {},
     "configFile": "jspm.config.js",
     "dependencies": {
+      "a1atscript": "npm:a1atscript@^0.4.4",
       "angular": "github:angular/bower-angular@^1.4.5",
       "angular-animate": "github:angular/bower-angular-animate@^1.4.5",
       "angular-aria": "github:angular/bower-angular-aria@^1.4.5",
-      "angular-material": "github:angular/bower-material@^0.11.0-rc1",
-      "angular-messages": "github:angular/bower-angular-messages@^1.4.5",
+      "angular-material": "github:angular/bower-material@^0.10.1",
       "angular-mocks": "github:angular/bower-angular-mocks@^1.4.5",
-      "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
-      "css": "github:systemjs/plugin-css@^0.1.15",
+      "angular-new-router": "npm:angular-new-router@^0.5.3",
+      "css": "github:systemjs/plugin-css@^0.1.16",
       "json": "github:systemjs/plugin-json@^0.1.0",
-      "ocLazyLoad": "github:ocombe/ocLazyLoad@^1.0.4",
-      "oclazyload-systemjs-router": "github:lookfirst/oclazyload-systemjs-router@^1.2.2",
       "text": "github:systemjs/plugin-text@^0.0.2"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.8.23",
-      "babel-runtime": "npm:babel-runtime@^5.8.20",
-      "core-js": "npm:core-js@^1.1.3"
+      "typescript": "npm:typescript@1.5.3"
+    },
+    "overrides": {
+      "npm:angular-new-router@0.5.3": {
+        "main": "dist/router.es5",
+        "format": "es6",
+        "dependencies": {
+          "jspm:angular": "^1.4.5"
+        },
+        "shim": {
+          "dist/router.es5": {
+            "deps": [
+              "angular"
+            ]
+          }
+        }
+      },
+      "npm:a1atscript@0.4.4": {
+        "format": "global"
+      }
     }
   }
 }
