--- a/package.json
+++ b/package.json
@@ -4,31 +4,8 @@
   "description": "Angular 1.4.x, TypeScript, JSPM,  Material starter kit",
   "main": "gulpfile.babel.js",
   "devDependencies": {
-    "babel-core": "^5.8.24",
-    "browser-sync": "^2.9.3",
-    "browser-sync-spa": "^1.0.3",
-    "config": "^1.16.0",
-    "del": "^2.0.2",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-gh-pages": "^0.5.2",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.3.0",
     "gulp-ng-recipes": "^0.1.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "^2.0.4",
-    "gulp-scss-lint": "^0.3.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-tslint": "^3.2.0",
-    "gulp-typescript": "^2.8.2",
-    "gulp-util": "^3.0.6",
-    "http-proxy-middleware": "^0.8.1",
-    "js-yaml": "^3.4.2",
-    "jspm": "^0.16.2",
-    "run-sequence": "^1.1.2",
-    "sw-precache": "^2.0.1",
-    "yargs": "^3.24.0"
+    "gulp-sass": "^2.0.4"
   },
   "scripts": {
     "test": "karma test",
